Fix Login to Discord and My Ship buttons not having a visible background, making it almost impossible to see their text, on mobile

--- a/frontend/assets/styles/main.scss
+++ b/frontend/assets/styles/main.scss
@@ -241,6 +241,10 @@ input[type='submit'] {
     text-align: center;
   }
 
+  &.whitebackground {
+    background-color: white;
+  }
+
   &.combo {
     margin-right: 0;
     margin-left: 0;
